v6.2.0  优化代码,实体类